<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_auth">


    <fragment
        android:id="@+id/navigation_img2img"
        android:name="com.example.sdapp.ui.img2img.Img2ImgFragment"
        android:label="@string/title_img2img"
        tools:layout="@layout/fragment_img2img" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.sdapp.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_navigation_gallery_to_navigation_image_info"
            app:destination="@id/navigation_image_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sdapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_imageDisplay"
        android:name="com.example.sdapp.ui.ImageDisplayFragment"
        android:label="@string/image_display"
        tools:layout="@layout/image_display" />
    <fragment
        android:id="@+id/navigation_generate"
        android:name="com.example.sdapp.ui.GenerationFragment"
        android:label="@string/generate"
        tools:layout="@layout/generation" />
    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.example.sdapp.start.AuthFragment"
        android:label="Auth"
        tools:layout="@layout/fragment_auth" />
    <fragment
        android:id="@+id/navigation_reg"
        android:name="com.example.sdapp.start.RegFragment"
        android:label="Registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/navigation_image_info"
        android:name="com.example.sdapp.ImageInfo"
        android:label="Image Info"
        tools:layout="@layout/image_info">
    </fragment>

</navigation>